--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.4",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
-    "mongoose": "^5.4.9"
+    "fs-extra": "^7.0.1",
+    "mkdirp": "^0.5.1",
+    "mongoose": "^5.4.9",
+    "resize-img": "^1.1.2"
   }
 }
